fix compiler errors